[package]
name = "npm_time_machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["json"] }
semver = { version = "1.0.17", features = ["serde"] }
serde = { version = "1.0.154", features = ["derive"] }
serde_json = { version = "1.0.94", features = ["std"] }
time = { version = "0.3.20", features = ["macros", "parsing", "serde"] }
tokio = { version = "1.26.0", features = ["full"] }
