[package]
name = "npm_time_machine"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Przemysław Alexander Kamiński (exlee)"]
repository = "https://github.com/exlee/npm_time_machine"
homepage = "https://github.com/exlee/npm_time_machine"
keywords = ["npm", "utility", "cli"]
categories = ["command-line-utilities", "development-tools"]
description = "Utility to move package.json through the time. Pin and upgrade your project in chunks!"

exclude = [
  "extras/*",
  "sample_data/*",
  ".licensesnip"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["json"] }
semver = { version = "1.0.17", features = ["serde"] }
serde = { version = "1.0.154", features = ["derive"] }
serde_json = { version = "1.0.94", features = ["std", "preserve_order"] }
time = { version = "0.3.20", features = ["macros", "parsing", "serde"] }
tokio = { version = "1.26.0", features = ["full"] }
